tests/macros/input/plugin.rs
fn main() {
    let q = requestty::questions![Input { plugin: todo!() }];
}
